<resources>
    <string name="app_name">Quiz Me</string>
    <string name="header">7 Wonders of the world</string>
    <string name="question1">Which wonder of the world is found in Egypt ?</string>
    <string name="question2">Machu Picchu is in which country ?</string>
    <string name="question3">The Taj Mahal  belongs to which country ?</string>
    <string name="peru">Peru</string>
    <string name="egypt">Egypt</string>
    <string name="india">India</string>
    <string name="jordan">Jordan</string>
    <string name="question4">Which Countries have similar features ?</string>
    <string name="checkbox_india">India</string>
    <string name="checkbox_mexico">Mexico</string>
    <string name="checkbox_egypt">Egypt</string>
    <string name="checkbox_brazil">Brazil</string>
    <string name="question5">What feature is found in Rome ?</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="evaluate_button">Get Score</string>

    <string name="question6">The Petra is located in which Country ?</string>
    <string name="question7">What is this wonder called ?</string>
    <string name="great_wall_of_china">The Great Wall of China</string>
    <string name="answer">Answer</string>
    <string name="the_chichen_itza">Chichen Itza</string>
    <string name="the_great_wall_of_china">The Great Wall</string>
    <string name="colosseum">The Colosseum</string>
    <string name="Q5">The Colosseum</string>
</resources>
